# trade-rs

./: .gitignore  README.md
crates/backgambler/: Cargo.toml
crates/backgambler/src/: broker.rs  errors.rs  event.rs  gambler.rs  lib.rs  order.rs  portfolio.rs  position.rs  strategy.rs
crates/backgambler/src/data/: mod.rs
crates/backgambler/src/data/test/: test.py
crates/backtrader/: Cargo.toml
crates/backtrader/src/: data.rs  errors.rs  event.rs  gambler.rs  lib.rs  order.rs  portfolio.rs  strategy.rs
crates/backtrader/src/data/: mod.rs
crates/backtrader/src/data/test/: orcl-1995-2014.txt
crates/practice/: Cargo.toml
crates/practice/src/: main.rs
crates/practice/src/data/: mod.rs
scripts/: get_a_shares.py  test.py
