[package]
name = "practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backgambler = { path = '../backgambler' }
tokio = { version = "1", features = ["full"] }
# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
itertools = "0.10.5"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.17"
csv = "1.2.0"
thiserror = "1.0.38"
derive_builder = "0.12.0"
parking_lot = "0.12.1"
more-asserts = "0.3.1"
ta = "0.5.0"
env_logger = "0.10.0"
anyhow = "1.0.69"
